Bug 1580742: Allow sandboxed x86 GMP process to duplicate crashreporter handle to the arm64 main process. r=handyman

Differential Revision: https://phabricator.services.mozilla.com/D51985