security/sandbox/win/src/remotesandboxbroker/RemoteSandboxBrokerChild.cpp
@@ -50,8 +50,19 @@ mozilla::ipc::IPCResult RemoteSandboxBrokerChild::AnswerLaunchApp(
     envmap[towstring(env.name())] = towstring(env.value());
   }
 
+  // We need to add our parent as a target peer, so that the sandboxed child can
+  // duplicate handles to it for crash reporting. AddTargetPeer duplicates the
+  // handle, so we use a ScopedProcessHandle to automatically close ours.
+  ipc::ScopedProcessHandle parentProcHandle;
+  if (!base::OpenProcessHandle(OtherPid(), &parentProcHandle.rwget())) {
+    *aOutOk = false;
+    return IPC_OK();
+  }
+  mSandboxBroker.AddTargetPeer(parentProcHandle);
+
   if (!mSandboxBroker.SetSecurityLevelForGMPlugin(
-          AbstractSandboxBroker::SandboxLevel(aParams.sandboxLevel()))) {
+          AbstractSandboxBroker::SandboxLevel(aParams.sandboxLevel()),
+          /* aIsRemoteLaunch */ true)) {
     *aOutOk = false;
     return IPC_OK();
   }
